Fix responsive issue with welcome-completed-row taking up extra space on sm devices
- Consolidate <% if flash[:tour_complete] || current_user.setup.any? %> logic

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -1934,58 +1934,59 @@ body.google_integrations_controller {
     opacity: 0;
   }
 }
-.welcome-completed-row {
-  text-align: center;
-  transition: all 1s ease;
+.welcome-container {
   position: relative;
-  height: 0;
-  z-index: 4;
-  display: inline-block;
-  opacity: 1;
-  top: -80px;
-  &.uncompleted {
-    top: 40px;
-    opacity: 0;
-    z-index: 0;
-  }
-  h1 {
-    font-weight: 500;
-    font-size: 44px;
-  }
-  hr {
-    width: inherit;
-    margin: 20px auto;
-    border-width: 5px;
-  }
-  .tutorial-links {
-    font-size: 16px;
-    a {
+  .welcome-completed-row {
+    text-align: center;
+    transition: all 1s ease;
+    z-index: 4;
+    position: absolute;
+    opacity: 1;
+    top: 100px;
+    &.uncompleted {
+      opacity: 0;
+      z-index: 0;
+      top: 220px; //for fade out down animation
+    }
+    h1 {
+      font-weight: 500;
+      font-size: 44px;
+    }
+    hr {
+      width: inherit;
+      margin: 20px auto;
+      border-width: 5px;
+    }
+    .tutorial-links {
+      font-size: 16px;
+      a {
+        display: inline-block;
+        width: 32%;
+        margin-bottom: 20px;
+        color: $color_gray_dark;
+        text-align: left;
+      }
+      .fa {
+        margin-right: 12px;
+        font-size: 20px;
+        color: $color_gold;
+      }
+    }
+    .welcome-completed-dismiss {
+      float: right;
       display: inline-block;
-      width: 32%;
-      margin-bottom: 20px;
-      color: $color_gray_dark;
-      text-align: left;
+      width: 50px;
+      height: 50px;
+      border-radius: 25px;
+      line-height: 42px;
+      background-color: white;
+      color: $gray_light;
+      border: 3px solid $gray_light;
+      font-size: 30px;
+      position: relative;
+      top: -20px;
+      cursor: pointer;
     }
-    .fa {
-      margin-right: 12px;
-      font-size: 20px;
-      color: $color_gold;
-    }
-  }
-  .welcome-completed-dismiss {
-    float: right;
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    line-height: 42px;
-    background-color: white;
-    color: $gray_light;
-    border: 3px solid $gray_light;
-    font-size: 30px;
-    position: relative;
-    top: -20px;
-    cursor: pointer;
   }
 }
 .fadable {
